# FiLiP

./: .gitignore  CHANGELOG.md  setup.cfg  setup.py
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: semantic-release.yml
docs/source/: conf.py
parser/: __init__.py  custom_angular_parser.py
