# Inside of setup.cfg
[metadata]
description-file = README.md

[semantic_release]
version_variable = filip/__init__.py:__version__,docs/source/conf.py:release
;commit_parser = parser.custom_angular_parser
branch = development
major_on_zero = false
upload_to_pypi = false
commit_subject = chore(release): {version}
parser_angular_allowed_types=build,chore,ci,docs,feat,fix,perf,style,refactor,test,merge
changelog_sections=feature,fix,breaking,documentation,performance,merge